# immortal_client

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
immortal_client/: client.py
immortal_client.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: get-status.py
